2003-07-02  Ulrich Drepper  <drepper@redhat.com>

	* posix/bits/posix1_lim.h (_POSIX_NGROUPS_MAX): Define to 8 or 0
	depending on selected standard.
	(NGROUPS_MAX): Define to 8 if not defined.

2003-07-02  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/x86_64/sys/epoll.h: New file.

2003-05-04  H.J. Lu  <hongjiu.lu@intel.com>

	* malloc/arena.c (arena_get2): Add atomic_write_barrier.
	* malloc/thread-m.h: Include <atomic.h>.
	(atomic_full_barrier): Provide default.
	(atomic_read_barrier): Likewise.
	(atomic_write_barrier): Likewise.
	* sysdeps/ia64/bits/atomic.h (atomic_full_barrier): New #define.

2003-06-30  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/sysdep.h: Define cfi_rel_offset and CFI_REL_OFFSET.

2003-06-30  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/bits/atomic.h (__arch_compare_and_exchange_bool_*_int):
	Invert the sense of the return value.
	(__arch_exchange_16_int): Fix paste-o.
	(__arch_exchange_{32,64}_int): Fix think-o.

	* sysdeps/unix/sysv/linux/alpha/clone.S: Load child_tid properly.

2003-06-30  Richard Henderson  <rth@redhat.com>

	* include/sys/resource.h (__getrusage): Mark hidden.
	* include/sys/time.h (__settimeofday, __setitimer, __utimes): Likewise.
	* include/sys/wait.h (__wait4): Likewise.

2003-06-17  Guido Guenther  <agx@sigxcpu.org>

	* sysdeps/unix/sysv/linux/mips/xstatconv.c: Handle STAT_IS_KERNEL_STAT
	case.
	(xstat_conv): Rename to __xstat_conv and remove static inline.
	(xstat64_conv): Likewise.

2003-06-29  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/sleep.c (__sleep): Handle parameter
	values which cannot be handled in one nanosleep call.

2003-06-25  Alfred M. Szmidt  <ams@kemisten.nu>

	* sysdeps/generic/bits/in.h (IPV6_HOPOPTS, IPV6_DSTOPTS): New macros.
	(IPV6_RXHOPOPTS, IPV6_RXDSTOPTS): Use them.

	* sysdeps/generic/ifreq.h (__if_nextreq) [_HAVE_SA_LEN]: Typo fix.

2003-06-04  Thorsten Kukuk  <kukuk@suse.de>
