@@ -307,8 +307,8 @@
 #endif
 
 /* For x86, support for the sysenter instruction was available in
-   2.5.53.  */
-#if __LINUX_KERNEL_VERSION >= 132405 && defined __i386__
+   2.5.53.  But the unwind information was added only in 2.5.69.  */
+#if __LINUX_KERNEL_VERSION >= 132421 && defined __i386__
 # define __ASSUME_VSYSCALL	1
 #endif
 
